# clang_tools_howto

./: CMakeLists.txt  README.md
cmake/modules/: FindClangTools.cmake
example_exe/: CMakeLists.txt  main.cpp
example_lib/: CMakeLists.txt
example_lib/include/: example_lib.h
example_lib/src/: example_lib.cpp
